applications/reconnaissance-service/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: reconnaissance-service # reconnaissance-service.<namespace>.svc.cluster.local
    labels:
        app: reconnaissance-service
        service: reconnaissance-service
spec:
    selector:
        app: reconnaissance-service
    ports:
        -   port: 8080
            targetPort: 8080
            name: http
