applications/reconnaissance-service/kustomize/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: reconnaissance-service
    labels:
        sidecar.istio.io/inject: "true"
spec:
    parentRefs:
        -   name: api-gateway
            kind: Gateway
            namespace: development
            group: "gateway.networking.k8s.io"
    rules:
        -   matches:
                -   path:
                        type: PathPrefix
                        value: /v1/reconnaissance-service
            filters:
                -   type: RequestHeaderModifier
                    requestHeaderModifier:
                        add:
                            -   name: X-API-Version
                                value: v1
                -   type: URLRewrite
                    urlRewrite:
                        # hostname: elsewhere.example
                        path:
                            type: ReplacePrefixMatch
                            replacePrefixMatch: /
            backendRefs:
                -   name: reconnaissance-service
                    kind: Service
                    port: 8080
